--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - run: sudo apt-get update && sudo apt-get install -y --no-install-recommends netbase
       - run: |
           cd /home/linuxbrew/.linuxbrew/Homebrew
-          git fetch origin --unshallow --tags
+          git fetch origin --tags
           git reset --hard origin/master
       - checkout
       - run: git remote set-url origin $CIRCLE_REPOSITORY_URL
